- ADDED: `FormattedStringBuilder` overloads for links with colours.

- CHANGED: Modopedia books should now show up on JEI and REI searches under the namespace they were created in (e.g. for searching `@enchanted`). This feature currently only works on NeoForge.