@@ -1,5 +1,5 @@
 [versions]
-    modopedia = "1.1.4"
+    modopedia = "1.1.5"
 
 # Common
     minecraft = "1.21.1"
