@@ -6,5 +6,6 @@
     "special_page"
   ],
   "children": [
-  ]
+  ],
+  "sort_num": 1
 }
